--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py27-django{18,19},py35-django19
+envlist = py36-django21
 
 [testenv]
 usedevelop = True
 deps =
-    django18: Django>=1.8,<1.9
-    django19: Django>=1.9,<1.10
+    django21: Django>=2.1
     -rtest_requirements.txt
 commands = python runtests.py
